# OpenApi.yaml
@@ -23,117 +23,15 @@
         }
       }
     },
-    "/items/{item_id}": {
-      "get": {
-        "summary": "Read Item",
-        "operationId": "read_item_items__item_id__get",
-        "parameters": [
-          {
-            "name": "item_id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "title": "Item Id"
-            }
-          },
-          {
-            "name": "q",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "anyOf": [
-                {
-                  "type": "string"
-                },
-                {
-                  "type": "null"
-                }
-              ],
-              "title": "Q"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-
-                }
-              }
-            }
-          },
-          "422": {
-            "description": "Validation Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
-                }
-              }
-            }
-          }
-        }
-      },
-      "put": {
-        "summary": "Update Item",
-        "operationId": "update_item_items__item_id__put",
-        "parameters": [
-          {
-            "name": "item_id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "title": "Item Id"
-            }
-          }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Item"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-
-                }
-              }
-            }
-          },
-          "422": {
-            "description": "Validation Error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/uploadfile/": {
+    "/person_face_image": {
       "post": {
-        "summary": "Create Upload File",
-        "operationId": "create_upload_file_uploadfile__post",
+        "summary": "Read Root",
+        "operationId": "read_root_person_face_image_post",
         "requestBody": {
           "content": {
             "multipart/form-data": {
               "schema": {
-                "$ref": "#/components/schemas/Body_create_upload_file_uploadfile__post"
+                "$ref": "#/components/schemas/Body_read_root_person_face_image_post"
               }
             }
           },
@@ -162,11 +60,64 @@
           }
         }
       }
+    },
+    "/deepfake_image/{retType}": {
+      "post": {
+        "summary": "Create Upload File",
+        "operationId": "create_upload_file_deepfake_image__retType__post",
+        "parameters": [
+          {
+            "name": "retType",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "enum": [
+                "BASIC",
+                "BLURRED"
+              ],
+              "type": "string",
+              "title": "Rettype"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/Body_create_upload_file_deepfake_image__retType__post"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
     "schemas": {
-      "Body_create_upload_file_uploadfile__post": {
+      "Body_create_upload_file_deepfake_image__retType__post": {
         "properties": {
           "file": {
             "type": "string",
@@ -178,7 +129,21 @@
         "required": [
           "file"
         ],
-        "title": "Body_create_upload_file_uploadfile__post"
+        "title": "Body_create_upload_file_deepfake_image__retType__post"
+      },
+      "Body_read_root_person_face_image_post": {
+        "properties": {
+          "file": {
+            "type": "string",
+            "contentMediaType": "application/octet-stream",
+            "title": "File"
+          }
+        },
+        "type": "object",
+        "required": [
+          "file"
+        ],
+        "title": "Body_read_root_person_face_image_post"
       },
       "HTTPValidationError": {
         "properties": {
@@ -192,35 +157,6 @@
         },
         "type": "object",
         "title": "HTTPValidationError"
-      },
-      "Item": {
-        "properties": {
-          "name": {
-            "type": "string",
-            "title": "Name"
-          },
-          "price": {
-            "type": "number",
-            "title": "Price"
-          },
-          "is_offer": {
-            "anyOf": [
-              {
-                "type": "boolean"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Is Offer"
-          }
-        },
-        "type": "object",
-        "required": [
-          "name",
-          "price"
-        ],
-        "title": "Item"
       },
       "ValidationError": {
         "properties": {
